--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.min.css');
